--- a/style/style.css
+++ b/style/style.css
@@ -18,12 +18,17 @@ body {
 hr {
     border: 1px solid #D1D1D1;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 /* main section css*/
 main {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 36px;
+    row-gap: 21px;
 }
 
 /* container-body */
@@ -68,3 +73,44 @@ main {
 }
 
 /* Top Players style end */
+/* Top Blogs style start */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    row-gap: 26px;
+    column-gap: 26px;
+    padding-left: 22px;
+    padding-right: 22px;
+}
+.blog{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+.blog-name{
+    font-size: 20px;
+}
+.autor-name {
+    color: #9F9F9F;
+}
+.autor-name a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+
+/* Top Blogs style end */
+/* Latest course start */
+.container-2{
+    background: #ffffff;
+    width: 870px;
+    border-radius: 5px;
+    padding: 30px;
+}
+/* Latest course end */
+
