--- a/style/style.css
+++ b/style/style.css
@@ -112,5 +112,36 @@ main {
     border-radius: 5px;
     padding: 30px;
 }
+.courses{
+    display:flex;
+    flex-direction: column;
+    
+}
+.course{
+    height: 270px;
+    width: 270px;
+    background: rgb(240, 165, 165);
+}
+.course-banner img{
+    width: 244px;
+    height: 104px;
+}
+.course-rating{
+    display: flex;
+    align-items:center;
+    justify-content: space-evenly;
+    margin-right: 5px;
+    
+}
+.course-duration{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #FFE4E8;
+    
+    border-radius: 20px;
+    padding: 20px;
+    margin: 10px;
+}
 /* Latest course end */
 
