--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,14 @@ main {
     width: 870px;
     border-radius: 5px;
     padding: 30px;
+}
 
+.container-2 {
+    background: #fff;
+    width: 870px;
+    border-radius: 5px;
+    padding: 30px;
+    display: flex;
 }
 
 /* section-title style */
@@ -74,74 +81,97 @@ main {
 
 /* Top Players style end */
 /* Top Blogs style start */
-.blogs{
+.blogs {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     row-gap: 26px;
     column-gap: 26px;
     padding-left: 22px;
     padding-right: 22px;
 }
-.blog{
+
+.blog {
     display: flex;
     align-items: center;
     gap: 16px;
 }
+
 .blog .thumbnail img {
     width: 177px;
     height: 117px;
 }
-.blog-name{
+
+.blog-name {
     font-size: 20px;
 }
+
 .autor-name {
     color: #9F9F9F;
 }
-.autor-name a{
+
+.autor-name a {
     text-decoration: none;
     font-size: 16px;
     color: #562EFF;
 }
 
 /* Top Blogs style end */
-/* Latest course start */
-.container-2{
-    background: #ffffff;
-    width: 870px;
+/* Latest Course Start */
+.section-2 {
+    background: #ffff;
     border-radius: 5px;
-    padding: 30px;
+    margin-bottom: 28px;
 }
-.courses{
-    display:flex;
-    flex-direction: column;
-    
-}
-.course{
-    height: 270px;
-    width: 270px;
-    background: rgb(240, 165, 165);
-}
-.course-banner img{
-    width: 244px;
-    height: 104px;
-}
-.course-rating{
+
+.card-class-flex {
     display: flex;
-    align-items:center;
-    justify-content: space-evenly;
-    margin-right: 5px;
-    
 }
-.course-duration{
+
+.card-flex {
+    display: flex;
+    flex-direction: column;
+    width: 253px;
+    height: 269px;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+}
+
+.info {
+    padding: 8px;
+}
+
+.card-cover-image {
+    width: 100%;
+    height: 40%;
+}
+
+.card-cover-image img {
+    width: 100%;
+}
+
+.ratings {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    background: #FFE4E8;
-    
-    border-radius: 20px;
-    padding: 20px;
-    margin: 10px;
+    gap: 5px;
 }
-/* Latest course end */
 
+.duration {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: #FEE5DF;
+    color: #FF4A60;
+    padding: 10px 10px;
+    border-radius: 25px;
+}
+
+.fa-star {
+    color: #FFC014;
+}
+
+.fa-star-half-stroke {
+    color: #EBEBEB;
+}
+
+/* Latest course end */
